# shuup-xtheme-extra-layouts

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  requirements-test.txt  setup.cfg
.tx/: config
shuup_xtheme_extra_layouts/: apps.py  layouts.py
shuup_xtheme_extra_layouts/locale/en/LC_MESSAGES/: django.po
shuup_xtheme_extra_layouts/locale/es/LC_MESSAGES/: django.po
shuup_xtheme_extra_layouts/locale/fi_FI/LC_MESSAGES/: django.po
shuup_xtheme_extra_layouts/locale/fr_CA/LC_MESSAGES/: django.po
shuup_xtheme_extra_layouts/locale/sv_SE/LC_MESSAGES/: django.po
shuup_xtheme_extra_layouts_tests/: faux_users.py  settings.py  test_layouts.py  utils.py
