[metadata]
name = shuup-xtheme-extra-layouts
version = 1.0.0
description = Shuup Xtheme Extra Layouts
long_description = file: README.rst
keywords = shuup,xtheme,layouts,extra

[options]
include_package_data = True
packages = find:
install_requires =
    shuup>=2,<3
    django-environ>=0.4.3,<1

[options.entry_points]
shuup.addon = shuup_xtheme_extra_layouts = shuup_xtheme_extra_layouts

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,dist,venv,migrations,docs,build,doc
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_xtheme_extra_layouts_tests.settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[isort]
atomic=true
combine_as_imports=false
multi_line_output=5
not_skip=__init__.py
length_sort=false
line_length=79
order_by_type=false
wrap_length=79
diff=True
skip=.tox,dist,venv,migrations,docs,build
known_first_party=shuup_xtheme_extra_layouts
known_standard_library=token,tokenize,enum,importlib
known_third_party=
    django
    enumfields
    jsonfield
    mock
    pytest
    shuup
    six

[prequ]
annotate = yes

requirements-dev =
    flake8<5
    isort<5
    prequ

requirements-test =
    beautifulsoup4==4.5.3
    pytest<6
    pytest-cov
    pytest-django==3.9.0
    flake8<5
    isort<5
    -e .
